--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -4,6 +4,7 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081800.md#1" title="美国加速与中共经济脱钩 建立新经济圈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078619.md#1" title="【瘟疫与中共】死亡名单中党员占大多数""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/02/generic-coronavirus-cdc-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079010.md#1" title="【最新疫情5·4】姆钦：国际旅行今年很难恢复""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QV79P-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/26/n11977935.md#1" title="【品读宋词】词中帝王 风流千古""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/b7b1918710511f306a11fe707f92e71d-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080777.md#1" title="川普：中共犯了一个可怕错误 还不想承认""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VE-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/25/n11974313.md#1" title="【思想领袖】章家敦：瘟疫加快中共垮台""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/021200x800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080606.md#1" title="公安部洗牌 港警丑闻曝光 牵出国安级爆料""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079888.md#1" title="“我要爸爸妈妈”贵州12岁儿哭喊离世""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/2010-7-20-minghui-falun-gong-202255-0-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080214.md#1" title="蓬佩奥：大量证据将病毒和武汉实验室相联""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QR3K6-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076680.md#1" title="中共瞒疫被追责 专家与外交官不同调的背后""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/cd63e7d91bfd066d027c667054c4ad6c-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076254.md#1" title="【最新疫情5·3】库默：医疗设备不能依赖中国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/GettyImages-1208224252-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://elbl2947.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12082200.md#1">罕见结盟 美武器商与医疗业者合作生产呼吸机</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081777.md#1">【纽约疫情5.4】纽约市首次有足够的医疗用品</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080735.md#1">【一线采访视频版】批防疫措施 黄石一副院长被免</a><br>
-:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12082238.md#1">美国务院发起#为台湾推文“世界会向中共恫吓屈服？”</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12082234.md#1">美驻UN使团推文“UN应对台解禁”驻东盟团秀台国旗</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081775.md#1">16天内 大陆三省3名初三学生跑步猝死</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12082362.md#1">亲共派再推23条立法 陆委会：假借国安之名 箝制香港人权</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081777.md#1">【纽约疫情5.4】纽约市三大关键指标均下降</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12082400.md#1">北京若不加购美商品 川普：终止贸易协议</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12082200.md#1">罕见结盟 美武器商与医疗业者合作生产呼吸机</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080735.md#1">【一线采访视频版】批防疫措施 黄石一副院长被免</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078195.md#1">文革重来？湖北刘艳丽因言获罪被判四年</a><br>
@@ -39,7 +39,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,451,549 人
+!共 355,454,023 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -114,7 +114,7 @@
 <br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/20/n12046031.md#1">大总统徐世昌测一字 奇人料定战争结局</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/6/n12007148.md#1">李林甫拆大门应凶谶  穷秀才丢白财得元宝</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079670.md#1">为民请命且以德立信 邓训积福荫及后代</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/26/n11977935.md#1">【品读宋词】词中帝王 风流千古</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076297.md#1">守成贤主宋仁宗 驾崩后连敌国也举国哀痛</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/22/n12051570.md#1">解读达芬奇未完之作《圣·杰洛姆》画中含意</a><br>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/12/n12024956.md#1">【馨香雅句】诗词中的女孩名</a><br>
 <br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/elbl2947/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
