--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -14,6 +14,7 @@
 川普政府力推全球供应链从中国撤离
 川普：世卫是一场灾难
 蓬佩奥：中共故.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 4:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/26/n11977935.md#1" target="_blank">【品读宋词】词中帝王 风流千古</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/26/n11977935.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/03/b7b1918710511f306a11fe707f92e71d-150x120.jpg" align ="left"></a>我们在这个系列提到的著名词人，有风华绝代的布衣书生，也有温婉妩媚的淑女佳人；有经世治国的文臣宰相，也有驰骋疆场的百战神将，这些人几乎涵盖了两宋风流人物的各个阶层。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 12:50 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080777.md#1" target="_blank">川普：中共犯了一个可怕错误 还不想承认</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080777.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VE-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周日（5月3日）表示，他认为中国（中共）犯的一个“错误”，是冠状病毒（中共病毒）大流行蔓延的原因。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank">【思想领袖】章家敦：瘟疫加快中共垮台</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/021200x800-150x120.jpg" align ="left"></a>中共病毒揭示了中共政权的当务之急是什么？美国在华公司处境如何？这些又是如何同中共政权在美国的大外宣运作联系到一起的？这里是美国思想领袖节目......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-150x120.jpg" align ="left"></a>4月下旬以来，有关香港警队及中共公安部异动消息频传，看似杂乱，却有内在联系。4月30日警务处处长“一哥”邓炳强强制取消长洲太平清醮的抗疫送神仪式被非议；警务处助理处长陶辉因违规入住“牌照房”被查，5月2日再被指涉嫌霸占官地，僭建民宿招租；4月29日包括陶辉在内的英籍警官被指控是警暴“要犯”，港警后台北京政法系统正被整肃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 10:34 AM							</td></tr>
@@ -50,6 +51,5 @@
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078121.md#1" target="_blank">更多国家加入美国 要求调查中共和世卫</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078121.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/court_04-1-150x120.jpg" align ="left"></a>更多国家正在加入美国川普（特朗普）政府的行动，呼吁对中共、世卫组织（WHO）以及中共病毒（武汉肺炎）大流行的起源展开调查。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 11:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076765.md#1" target="_blank">【最新疫情5·2】巴菲特：美国将再现奇迹</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076765.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1G57SP-150x120.jpg" align ="left"></a>5月2日全球中共病毒（武汉肺炎）疫情最新情况。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 10:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077603.md#1" target="_blank">五一长假首日 哈尔滨紧急叫停餐馆堂食</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077603.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/600-400-1-1-150x120.jpg" align ="left"></a>中共内部文件显示，黑龙江省省会哈尔滨中共肺炎（武汉肺炎）疫情已经失控。五一黄金周首日，哈市发出紧急通知，要求自5月2日零时起，全市餐饮服务单位暂停堂食，开业时间另行通知。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 9:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077452.md#1" target="_blank">【一线采访】律师：解封后 武汉人生活似贫民</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077452.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-1220170766-150x120.jpg" align ="left"></a>武汉解封后生活恢复正常了吗？疫情爆发以来，一直以公民记者身份滞留武汉的上海维权律师张展，观察到当地民生陷入窘境。她对大纪元表示，物价高，生活水平下降，“人们开始一种贫民的生活。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 9:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/elbl2947/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/elbl2947/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/elbl2947/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
