--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -37,10 +37,7 @@
 江泽民与武汉P4实验室的建立
 武汉病毒研究所P4实验室，是前中共独裁者.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月01日 12:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/30/n12074104.md#1" target="_blank">疫情令广告剧减《洛杉矶时报》登11版中共大外宣</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/30/n12074104.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/23-150x120.jpg" align ="left"></a>4月29日的《洛杉矶时报》插入了12版的广告专刊（Advertising Supplement），其中11版都是在为中国做宣传，从“广州村民摆脱贫困”到“青岛将在5月初在线上举办风险投资大会”到“上海要在2025年成为世界上公共卫生最安全的城市”??这套专刊的头版上写“国际日报”（International Daily.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月01日 10:21 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078564.md#1" target="_blank">云鹤天：新版《共产党宣言》</a><br></h3>中共病毒红幽灵
-武肺全球大流行
-人类空前大劫难
-劫后面临大清算......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月03日 5:31 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/30/n12073703.md#1" target="_blank">何清涟：俄美走近 战狼为何不敢向普京呲牙</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/30/n12073703.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/12/000_1HX9EL-150x120.jpg" align ="left"></a>目前中国陷入改革开放以来最大外交困境，“战狼”突击队四处出击，重炮轰美国国务卿彭佩奥与共和党；胡锡进更是极度无礼，称澳大利亚“像粘在中国鞋底上的嚼过的口香糖，有时你不得不找一块石头把它给蹭下来”。但在疫情时期因中国侨民与北京摩擦甚多的俄罗斯，不仅送上抗疫物质，还要搭上无数美言。对4月25日的美俄总统就易北河会师75周年.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月01日 9:28 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078454.md#1" target="_blank">吴新：比尔?盖茨，请问：您现在注意力在哪儿？</a><br></h3>中共不愧红魔邪灵，中共病毒也真邪性。
 逼迫人人都得表态，径直冲着人的性命。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月03日 5:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077220.md#1" target="_blank">【网海拾贝】经济学家敢说实话就被喝茶</a><br></h3>中共独裁体制下逆淘汰，有本事的讲真话的都被灭了，只剩下点赞的拍马的。今天引发经济学家李迅雷喝茶传闻的报告原文：测算中国新增失业人数可能已经超过7000万，对应的失业率大概在20.5%。——网友......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 11:05 AM			</td></tr>
