--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,6 +27,9 @@
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/4/9/n12015940.md#1" target="_blank">天地清明引(276) 众生劫－问鼎剑道2</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/4/9/n12015940.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/shutterstock_636573383-150x120.jpg" align ="left"></a>傍晚时分，严奉买了酒肉，但要庆贺，回至家中，听闻噩耗。马不停蹄，又奔衙门而来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/1/n12076481.md#1" target="_blank">【系列连载】进化论是怎样被判死刑的（四）</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/1/n12076481.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/02/dna-3539309-1920-600x400-150x120.jpg" align ="left"></a>2003年，在洞穴中发现了两个人的骨骼。经鉴定，这是一个小男孩和一名年轻女子的遗骸，他们都戴着鹿骨或鹿牙齿制作的装饰品。经考古学家的鉴定，确定他们是生活在2.8万年前的克罗马农人。更令人兴奋的是从遗骸的一片胫骨中，成功地提取了线粒体DNA的样本，发现他们是欧洲人的祖先。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 1:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/4/30/n12073552.md#1" target="_blank">一生波折难掩其风华 东汉才女蔡文姬</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/4/30/n12073552.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/03/6bf742c76bbb37c10edfbc79b652f990-150x120.png" align ="left"></a>蔡文姬生于公元177年，名琰，字昭姬，后为避司马昭讳，改为文姬，是东汉陈留郡圉县（今河南杞县人）。蔡家是圉县的大户人家，家境十分富裕，圉县人杰地灵，历代名人辈出。其父蔡邕是一位大文学家，生平藏书甚富。他的《蔡中郎集》流传于世，他参与书写的“熹平石经”，为后世校订儒家七经的刻石。蔡邕的书法“骨气洞达，爽爽如有神力”，蔡邕.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月01日 11:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082543.md#1" target="_blank">神韵行（四十五）失仙缘</a><br></h3>犹抱书生意气，尚怀慨世功名。
+谁怜母女乞街行？忽遇流氓抢聘。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月05日 12:19 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/3/n12079930.md#1" target="_blank">诗歌：初夏</a><br></h3> 温度陡升初夏至， 阳光直射亮园门。 一双新蝶花间舞， 几树丁香院内芬。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月05日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/3/n12079837.md#1" target="_blank">神韵行（四十四）曼舞仙声</a><br></h3>天界春迟，花满桃溪。
 管弦飘，瑞彩琼枝。
 玉台长望，蕊殿今依。
@@ -38,7 +41,5 @@
 小天鹅，不要怕，
 妈妈帮你们找个家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 12:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078322.md#1" target="_blank">五律：春暮</a><br></h3>夏来春欲暮， 演进未能停。 柳叶留春住， 梨花离绪生。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月03日 1:23 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/1/n12076270.md#1" target="_blank">台湾古典诗：过刚易折（二）</a><br></h3>拔山扛鼎孰堪论，四面楚歌悲断魂； 穿石涓流天下骋，刚柔相济转乾坤。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月01日 10:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/1/n12076256.md#1" target="_blank">今月：世界可以改变</a><br></h3> 同样的世界 有阳光就有阴暗   有人追寻光明 也有人习惯黑暗 你在边缘观望 阴暗更加蔓延......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月01日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/tacn272/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/tacn272/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tacn272/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/tacn272/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
