--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,7 @@
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12080860.md#1" target="_blank">北京名中医逃亡加国 曝中共如何迫害律师</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12080860.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/0016-320x200.jpg" align ="left"></a>2009年之前，这里来往的病人都是北京城内的离休、退休官员、军队干部、警察等。尽管这家诊所收费不低，却依然每天人来人往，生意红火。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月05日 1:03 AM					</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081777.md#1" target="_blank">【纽约疫情5.4】分四阶段开放各大行业</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081777.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1211620964-150x120.jpg" align ="left"></a>纽约州长安德鲁·库默（Andrew M. Cuomo）4日在疫情发布会表示，继之前讨论过的第一阶段——建筑业和制造业将优先重新开放后，他在宣布三类企业将依次重新开放。第二阶段将包括专业服务、零售和房地产。第三阶段则是餐饮业和酒店。第四阶段为艺术类和娱乐业。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月05日 12:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082400.md#1" target="_blank">北京若不加购美商品 川普：终止贸易协议</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082400.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ1BM-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周日（5月3日）表示，如果中共不履行第一阶段贸易协议，他会终止这个协议。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/3/n12080175.md#1" target="_blank">疫情“隔离”下 美国人如何给我女儿过生日</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/3/n12080175.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/IMG_2614-150x120.jpg" align ="left"></a>女儿也没有想到，在疫情下，在政府要求人们居家防疫的情况下，在学校已经关闭，连孩子们一起玩耍也被取消的日子里，她13岁生日会是如此盛大，如此特殊，如此终生难忘！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081951.md#1" target="_blank">【直播回放】5.4疫情追踪：中国南北爆疫情</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081951.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/download-12-150x120.jpg" align ="left"></a>欢迎收看新唐人、大纪元5月4日的“中共病毒追踪”每日联合直播节目。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081800.md#1" target="_blank">美国加速与中共经济脱钩 建立新经济圈</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081800.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-150x120.jpg" align ="left"></a>美国官员透露，川普（特朗普）政府正在进行“全面加速”的计划，将美国工业供应链从中国撤出。据悉川普总统的计划包括：对中国商品课征新关税，对美国回流公司进行税收激励措施、与台湾建立更紧密的关系等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078619.md#1" target="_blank">【瘟疫与中共】死亡名单中党员占大多数</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078619.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/generic-coronavirus-cdc-1-150x120.jpg" align ="left"></a>2019年底从武汉传出的中共病毒（新冠病毒，COVID-19），在中共的隐瞒下，如今已扩散至世界各国，演变为席卷全球的大瘟疫。无数人被病毒感染、病亡，给家庭和社会带来深重的创伤和恐慌。不过，从中国大陆传出在疫情中死亡的名单，揭示出了中共病毒的真正“靶点”，给深陷危机的各国民众带来警示。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 7:26 PM							</td></tr>
@@ -50,6 +51,5 @@
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078670.md#1" target="_blank">【疫情中的纽约人】为善最乐的旅馆老板</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078670.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/13765852_1073216896105458_537086688475308007_o-150x120.jpg" align ="left"></a>海崙旅馆的老板，也是美东台湾旅馆同业公会会长和美国“帮帮忙基金会”（SimplyHelp Foundation）美东分会会长的蔡庆辉先生，5月1日这天和太太与女儿一道，将价值四万美元的防护衣等救灾物资捐献给了新泽西蒙茅斯医疗中心等三家医院。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月03日 7:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078508.md#1" target="_blank">【一线采访】武汉军运村变方舱 业主抗议</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078508.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/1-9-150x120.jpg" align ="left"></a>5月2日，湖北武汉市保利军运村数百名业主在售楼部打横幅，抗议在未被告知情况下，购买的新房在疫情期间变“方舱”，要求退房，10人被抓。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月03日 6:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078431.md#1" target="_blank">中国制KN95口罩 麻州测试无一达标</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078431.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/1-1-1KN95-e1588448662654.png" align ="left"></a>麻州政府近日发布了中国制KN95口罩的测试结果，表明没有测试样本达到FDA规定的N95标准。其中一种样本的过滤功效仅有28.1%。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月03日 5:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078360.md#1" target="_blank">【一线采访】原材料价暴涨 陆口罩厂经营难</a><br></h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/2/n12078360.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/088bd95324d635e4372b632f3fc6ae9f-150x120.jpg" align ="left"></a>中共病毒（武汉肺炎）疫情延烧全球，各国对口罩的需求陡增，大量口罩生产厂家也在中国应运而生。虽然出口销路好、利润可观，但是原材料紧俏和大幅涨价等问题，导致不少厂家运营艰难。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月03日 3:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/tacn272/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/tacn272/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/tacn272/djy/blob/master/gb/nf4514.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tacn272/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/tacn272/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
